Fix spacing for smaller widths

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -70,7 +70,7 @@ header {
 .left-anchored-section {
   min-height: 300px;
   height: 730px;
-  margin: 400px auto;
+  margin: 480px auto;
   display: inline-block;
 }
 
